<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_time"
        android:icon="@drawable/ic_time"
        android:title="@string/title_time" />

        android:id="@+id/chatsFragment"
        android:icon="@drawable/ic_chat"
        android:title="Chats" />
    <item
        android:id="@+id/navigation_time"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/time" />
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_learn"
        android:title="Learn" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="Chat" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/learn" />
    <item
        android:id="@+id/navigation_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_me"
        android:title="@string/me" />

        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_account"
        android:title="Me" />


        android:id="@+id/quizListFragment"
        android:icon="@drawable/ic_quiz"
        android:title="Quizzes" />
</menu>